# Banking_api_using_gemini

./: README.md  api.http  main.py  pyproject.toml  requirements.txt  requirment.txt
