[project]
name = "bankapp-backend"
version = "0.1.0"
description = "A simple Banking API with API key authentication"
authors = []
dependencies = [
    "fastapi",
    "mangum",
    "pydantic",
    "uvicorn",
    "python-multipart",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
